# coq_serapy

./: .gitmodules  README.md  __init__.py  contexts.py  example.py  requirements.txt  setup.cfg  test_lsp.py
src/coq_serapy/: __init__.py  contexts.py  coq_agent.py  coq_backend.py  coq_util.py  lsp_backend.py  serapi_backend.py  util.py
