[metadata]
name = coq-serapy
version = 0.1.2
author = Alex Sanchez-Stern
author_email = alex.sanchezstern@gmail.com
description = Python bindings for Coq Serapi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HazardousPeach/coq_serapy

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    tqdm
    sexpdata
    pampy

[options.packages.find]
where = src
